--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: The Wallace Lab
-subtitle: RNA & Systems Biology of Fungi
+title: The Doyle Lab
+subtitle: Helminth Genomics
 categories:
  - home
 ---
