--- a/manual/index.html
+++ b/manual/index.html
@@ -31,14 +31,14 @@ navorder: 5
 
 <h2> Lab manual </h2>
 
-<p> Here is our lab manual: the essential points to know about working in the Wallace lab. </p>
+<p> Here is our lab manual: the essential points to know about working in the Doyle lab. </p>
 
-This is a living document that is now (March 2021) and forever under construction.
+This is a living document that is now (October 2021) and forever under construction.
 
 If there's anything missing, inaccurate, outdated, outrageous, or unhelpful, please 
-<a href="https://github.com/ewallace/ewallace.github.io/issues"> file an issue on the github page </a>,
+<a href="https://github.com/stephenrdoyle/stephenrdoyle.github.io/issues"> file an issue on the github page </a>,
 edit the file yourself and put in a pull request, 
-and/or talk to Edward.
+and/or talk to Steve.
 
 <hr>
 
