--- a/index.html
+++ b/index.html
@@ -163,3 +163,4 @@ categories:
 
 <div class="bigspacer"></div>
 
+<a class="twitter-timeline" href="https://twitter.com/stephenrdoyle?ref_src=twsrc%5Etfw">Tweets by stephenrdoyle</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
