--- a/index.html
+++ b/index.html
@@ -159,8 +159,15 @@ categories:
 		</div>
 		<div class="bigspacer"></div>		
 	</div>
+	<div class="col-md-4">
+		<div class="head">
+			<a class="off" href="/twitter/">twitter
+			</a>
+		<a class="twitter-timeline" href="https://twitter.com/stephenrdoyle?ref_src=twsrc%5Etfw">Tweets by stephenrdoyle</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
+		<div class="bigspacer"></div>		
+	</div>	
 </div>
 
 <div class="bigspacer"></div>
 
-<a class="twitter-timeline" href="https://twitter.com/stephenrdoyle?ref_src=twsrc%5Etfw">Tweets by stephenrdoyle</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
